Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97722

Geoclue-2 plugin fails to report speed and direction

XMLWordPrintable

    • All
    • 3
    • 70b7818e1fc585f8bac43b721f3dd172b7489d07 (qt/qtpositioning/dev) 7b15d32c2125a28c6c351bfa2d1a3eaeb5b93f13 (qt/qtpositioning/6.2) ec43d4172b (qt/tqtc-qtlocation/5.15.8) ec43d4172b (qt/tqtc-qtlocation/5.15.9) ec43d4172b (qt/tqtc-qtlocation/5.15.10)
    • Team 1 Foundation_Sprint 46

      Geoclue2 plugin is using constructs as

      ```

      if (const auto altitude = location.altitude() > std::numeric_limits<double>::min())

      ```

      which result in assigning 0 or 1 to altitude when compiled with recent gcc. The following patches by Teemu Ikonen <tpikonen@mailbox.org> fix that.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ivan.solovev Ivan Solovev
            rinigus Rinigus -
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes