Fix position handling in geoclue2 plugin

The pre-existing code was incorrect due to the operation priority.
The result of the comparison was assigned to the variables, so they
were always initialized with 0 or 1 instead of real values.

Also use std::numeric_limits<double>::lowest(), because the altitude
can have a negative value (when we are below sea level).

This commit is a manual cherry-pick from qtpositioning.git dev branch

Fixes: QTBUG-97722
Change-Id: I2d5beddfdf6d7b4fc626d6b09f4923c968016428
(cherry picked from commit 70b7818e1fc585f8bac43b721f3dd172b7489d07)
Reviewed-by: Juha Vuolle <juha.vuolle@insta.fi>